--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             display: flex;
             /* Usporiadanie prvkov vedľa seba */
             justify-content: space-between;
-            /* Rozdelenie priestoru medzi prvkami */
+            /* Rozdelenie priestoru medzi prvkami -*/
             align-items: flex-start;
             /* Zarovnanie prvkov hore */
             position: relative;
