--- a/index.html
+++ b/index.html
@@ -1,108 +1,94 @@
 <!DOCTYPE html>
-<html lang="sk"> <!-- Definuje jazyk stránky na slovenčinu -->
+<html lang="sk">
 
 <head>
-    <meta charset="UTF-8"> <!-- Nastavuje znaková sadu na UTF-8 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Umožňuje responzívny dizajn -->
-    <title>Kalkulačka mzdy</title> <!-- Názov stránky v prehliadači -->
-    <link rel="stylesheet" href="style.css"> <!-- Odkaz na externý CSS súbor -->
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kalkulačka mzdy</title>
+    <link rel="stylesheet" href="style.css">
     <style>
-        /* Štýly pre hlavný kontajner */
-        .container {
-            display: flex;
-            /* Usporiadanie prvkov vedľa seba */
-            justify-content: space-between;
-            /* Rozdelenie priestoru medzi prvkami -----*/
-            align-items: flex-start;
-            /* Zarovnanie prvkov hore */
-            position: relative;
+        .sub-row td {
+            text-align: left;
+            white-space: nowrap;
         }
 
-        /* Ľavá sekcia s formulárom a tabuľkou */
-        .left-content {
-            flex: 1;
-            /* Rozloženie obsahu na celú dostupnú šírku */
+        .sub-row td:first-child::before {
+            content: "\25CB   ";
+            /* Kružok (○) s tromi medzerami */
         }
 
-        /* Kontajner pre graf */
-        .chart-container {
-            width: 1400px;
-            /* Nastavenie šírky */
-            height: 400px;
-            /* Nastavenie výšky */
-            margin-top: 120px;
-            /* Odsadenie odhora */
+        td:not(:first-child) {
+            text-align: center;
         }
     </style>
 </head>
 
 <body>
-    <div class="container"> <!-- Hlavný kontajner, ktorý obsahuje formulár a graf -->
-        <div class="left-content"> <!-- Ľavá sekcia s formulárom a tabuľkou -->
-            <p><strong>Vyber typ mzdy:</strong></p> <!-- Nadpis formulára -->
-
-            <!-- Výber typu mzdy pomocou rádio tlačidiel -->
+    <div class="container">
+        <h2>Kalkulačka mzdy</h2>
+        <div class="typ-mzdy-container">Vyber typ mzdy</div>
+        <div>
             <label><input type="radio" name="typMzdy" value="hruba" checked> Hrubá mzda</label>
             <label><input type="radio" name="typMzdy" value="cista"> Čistá mzda</label>
             <label><input type="radio" name="typMzdy" value="superhruba"> Superhrubá mzda</label>
-
-            <br><br>
-
-            <!-- Pole na zadanie hodnoty mzdy -->
-            <label for="hodnotaMzdy">Zadaj hodnotu (€):</label>
-            <input type="number" id="hodnotaMzdy" min="0" placeholder="Zadaj sumu">
-
-            <br><br>
-
-            <!-- Tlačidlo na spustenie výpočtu -->
-            <button id="vypocetBtn">Výpočet</button>
-
-            <br><br>
-
-            <!-- Tabuľka s výsledkami odvodov a mzdy -->
-            <table>
-                <thead>
-                    <tr>
-                        <th>Typ odvodu</th> <!-- Hlavička tabuľky -->
-                        <th>Zamestnanec</th>
-                        <th>Zamestnávateľ</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Zdravotné poistenie</td>
-                        <td id="zdravotneZamestnanec">0 €</td> <!-- Hodnota pre zamestnanca -->
-                        <td id="zdravotneZamestnavatel">0 €</td> <!-- Hodnota pre zamestnávateľa -->
-                    </tr>
-                    <tr>
-                        <td>Sociálne poistenie</td>
-                        <td id="socialneZamestnanec">0 €</td>
-                        <td id="socialneZamestnavatel">0 €</td>
-                    </tr>
-                    <tr>
-                        <td>Daň z príjmu</td>
-                        <td id="danZamestnanec">0 €</td>
-                        <td>-</td> <!-- Zamestnávateľ neplatí daň z príjmu -->
-                    </tr>
-                    <tr>
-                        <td>Celkové náklady</td>
-                        <td id="cistaMzda">0 €</td> <!-- Čistá mzda zamestnanca -->
-                        <td id="superHrubaMzda">0 €</td> <!-- Superhrubá mzda zamestnávateľa -->
-                    </tr>
-                </tbody>
-            </table>
         </div>
-
-        <!-- Sekcia s grafom -->
+        <br>
+        <label for="hodnotaMzdy">Zadaj hodnotu (€):</label>
+        <input type="number" id="hodnotaMzdy" min="0" placeholder="Zadaj sumu">
+        <br>
+        <button id="vypocetBtn">Výpočet</button>
+        <br>
+        <table>
+            <thead>
+                <tr>
+                    <th>Typ odvodu</th>
+                    <th>Zamestnanec</th>
+                    <th>Zamestnávateľ</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><strong>Zdravotné poistenie</strong></td>
+                    <td id="zdravotneZamestnanec">0 €</td>
+                    <td id="zdravotneZamestnavatel">0 €</td>
+                </tr>
+                <tr>
+                    <td><strong>Sociálne poistenie</strong></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr class="sub-row">
+                    <td>Nemocenské poistenie</td>
+                    <td id="nemocenskeZamestnanec">0 €</td>
+                    <td id="nemocenskeZamestnavatel">0 €</td>
+                </tr>
+                <tr class="sub-row">
+                    <td>Starobné poistenie</td>
+                    <td id="starobneZamestnanec">0 €</td>
+                    <td id="starobneZamestnavatel">0 €</td>
+                </tr>
+                <tr class="sub-row">
+                    <td>Invalidné poistenie</td>
+                    <td id="invalidneZamestnanec">0 €</td>
+                    <td id="invalidneZamestnavatel">0 €</td>
+                </tr>
+                <tr>
+                    <td><strong>Daň z príjmu</strong></td>
+                    <td id="danZamestnanec">0 €</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td><strong>Celkové náklady</strong></td>
+                    <td id="cistaMzda">0 €</td>
+                    <td id="superHrubaMzda">0 €</td>
+                </tr>
+            </tbody>
+        </table>
         <div class="chart-container">
-            <canvas id="mzdaChart"></canvas> <!-- Plátno pre vykreslenie grafu -->
+            <canvas id="mzdaChart"></canvas>
         </div>
     </div>
-
-    <!-- Načítanie knižnice Chart.js na vykreslenie grafu -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <!-- Načítanie externého JavaScript súboru s logikou výpočtu -->
     <script src="script.js"></script>
 </body>
 
